--- a/html/enhancements.html
+++ b/html/enhancements.html
@@ -3,7 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        
+        <meta name="description"    content="enhancements page for COS10032 assignment 1 on topic Javascript">
+        <meta name="keywords"       content="javascript, enhancements">
+        <meta name="author"         content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+        <title>Enhancements</title>
     </head>
 
 
