--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="description"    content="index page for COS10032 assignment 1 topic javascript">
+        <meta name="keywords"       content="javascript">
+        <meta name="author"         content=""Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+        <title>Index page</title>
     </head>
 
     <body>
