--- a/html/topic.html
+++ b/html/topic.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="description"    content="topic page for COS10032 project 1 topic javascript">
+        <meta name="keywords"       content="javascript, topic, introduction">
+        <meta name="author"         content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+        <title>Topic page</title>
     </head>
 
     <body>
