--- a/html/quiz.html
+++ b/html/quiz.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <meta charset="utf-8">
+        <meta name="description"    content="quiz page for COS10032 project 1 topic javascript">
+        <meta name="keywords"       content="javascript, quiz">
+        <meta name="author"         content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+        <title>Quiz page</title>"
     </head>
 
     <body>
