--- a/assign1/index.html
+++ b/assign1/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description"    content="index page for COS10032 assignment 1 topic javascript">
         <meta name="keywords"       content="javascript">
-        <meta name="author"         content=""Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+        <meta name="author"         content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
         <title>Index page</title>
     </head>
 
