--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -13,4 +13,8 @@
     <body>
 
     </body>
+
+    <footer>
+        <a href="mailto: rwijesinghe@swin.edu.au">Questions? Feedback? Click to send email.</a>
+    </footer>
 </html>
