--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -1,14 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description"    content="topic page for COS10032 project 1 topic javascript">
-        <meta name="keywords"       content="javascript, topic, introduction">
-        <meta name="author"         content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
-        <title>Topic page</title>
-    </head>
 
-    <body>
-        
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="enhancements page for COS10032 assignment 1 on topic Javascript">
+    <meta name="keywords" content="javascript, enhancements">
+    <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Enhancements</title>
+    <!-- embedded code for external google font "Share Tech" -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+</head>
+
+
+
+
+<body>
+
+    <header class="website-header">
+        <div class="header-left">
+            <a href="index.html"><img class="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+            <h1 class="header-title">Introduction to Javascript</h1>
+        </div>
+
+        <div class="header-right">
+            <a href="index.html" class="header-navigation-link">HOME</a>
+
+            <a href="topic.html" class="header-navigation-link">WHAT IS JAVASCRIPT?</a>
+
+            <a href="quiz.html" class="header-navigation-link">TEST YOUR KNOWLEDGE</a>
+
+            <a href="enhancements.html" class="header-navigation-link">ENHANCEMENTS</a>
+        </div>
+    </header>
+
+    <h2 class="page-title">Overview</h2>
+    <p>
+        What is the technology? Its purpose / function? Major points / features ?
+    </p>
+
+    <h2>Who developed it? When? WHy?</h2>
+    <p>
+        Who developed it? When? Why?
+    </p>
+
+    <h2>oversight</h2>
+    <p>
+        What groups, if any, are responsible for managing it?
+    </p>
+
+    <h2>Looking forward...</h2>
+    <p>
+        Explain its growth or decline. Predict the future for the technology.
+    </p>
+
+    <h2>Related tech</h2>
+    <p>
+        What are related technologies? Compare / contrast with other technologies.
+    </p>
+
+    <footer class="website-footer">
+
+        <a class="email-link" href="mailto:rwijesinghe@swin.edu.au">
+            <img class="tutor-portrait" src="../images/Ravinda-Wijesinghe.png" alt="Ravinda Wijesinghe">
+            Questions? Feedback? Click here to email us.
+
+        </a>
+
+    </footer>
+
+</body>
+
+
+
 </html>
