updated index page according to rubric

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -8,25 +8,22 @@
     <meta name="keywords" content="javascript, enhancements">
     <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Enhancements</title>
+    <title>Introduction to Javascript</title>
     <!-- embedded code for external google font "Share Tech" -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 
-
-
-
 <body>
 
-    <header class="website-header">
-        <div class="header-left">
-            <a href="index.html"><img class="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+    <header id="website-header">
+        <div id="header-left">
+            <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
             <h1 class="header-title">Introduction to Javascript</h1>
         </div>
 
-        <nav class="header-right">
+        <nav id="header-right">
 
             <a href="index.html" class="header-navigation-link">HOME</a>
 
@@ -39,54 +36,43 @@
         </nav>
     </header>
 
-    <h2 class="page-title">Title here</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum perferendis porro dignissimos possimus velit
-        beatae. Voluptates vero, distinctio commodi beatae eos harum quibusdam soluta odit, laborum reiciendis deleniti
-        excepturi magni. </p>
+    <article>
+        <h2 class="page-title">About this website</h2>
+        <p>Welcome to our website. Here, we will introduce you to the wonderful world of <strong>Javascript</strong>. If you would like
+            to know more, please feel free to explore, browse and don't forget to take the quiz!</p>
 
-    <footer class="website-footer">
+        <a id="get-started" href="topic.html">GET STARTED!</a>
+    </article>
 
-        <!-- this allows the user to send a group email to tutor and students -->
-        <a class="group-feedback-link"
-            href="mailto:rwijesinghe@swin.edu.au,104142281@student.swin.edu.au,104810423@student.swin.edu.au,104934718@student.swin.edu.au">
-            <img class="email-icon" src="../images/email-icon.png" alt="email icon">
-            Questions? Feedback? Email us!
-        </a>
-
-
-        <!-- this section allows user to send individual emails to either tutor or a single student -->
-        <div class="individual-emails">
-
-            <div class="email-individual">
-                <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
-                    <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
-                </a>
-                <span class="tooltiptext">Email Ravinda!</span>
-            </div>
-
-            <div class="email-individual">
-                <a class="send-email" href="mailto:104142281@student.swin.edu.au">
-                    <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
-                </a>
-                <span class="tooltiptext">Email Lucy!</span>
-            </div>
-
-            <div class="email-individual">
-                <a class="send-email" href="mailto:104810423@student.swin.edu.au">
-                    <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
-                </a>
-                <span class="tooltiptext">Email Eloise!</span>
-            </div>
-
-            <div class="email-individual">
-                <a class="send-email" href="104934718@student.swin.edu.au">
-                    <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
-                </a>
-                <span class="tooltiptext">Email Oshadi!</span>
-            </div>
-
+    <footer id="website-footer">
+        Questions? Feedback? Contact us!
+        <div class="email-individual">
+            <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
+                <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
+            </a>
+            <span class="tooltiptext">Email Ravinda!</span>
         </div>
 
+        <div class="email-individual">
+            <a class="send-email" href="mailto:104142281@student.swin.edu.au">
+                <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
+            </a>
+            <span class="tooltiptext">Email Lucy!</span>
+        </div>
+
+        <div class="email-individual">
+            <a class="send-email" href="mailto:104810423@student.swin.edu.au">
+                <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
+            </a>
+            <span class="tooltiptext">Email Eloise!</span>
+        </div>
+
+        <div class="email-individual">
+            <a class="send-email" href="104934718@student.swin.edu.au">
+                <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
+            </a>
+            <span class="tooltiptext">Email Oshadi!</span>
+        </div>
     </footer>
 </body>
 
