index and topic page

--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -1,20 +1,77 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description"    content="enhancements page for COS10032 assignment 1 on topic Javascript">
-        <meta name="keywords"       content="javascript, enhancements">
-        <meta name="author"         content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
-        <title>Enhancements</title>
-    </head>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="enhancements page for COS10032 assignment 1 on topic Javascript">
+    <meta name="keywords" content="javascript, enhancements">
+    <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Website enhancements</title>
+    <!-- embedded code for external google font "Share Tech" -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+</head>
 
-    <body>
+<body>
+    <!-- HEADER -->
+    <header id="website-header">
+        <div id="header-left">
+            <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
+            <h1 class="header-title">Introduction to Javascript</h1>
+        </div>
 
-    </body>
+        <nav id="header-right">
+            <ul class="nav-list">
+            <li class="nav-list-item"><a href="index.html" class="header-navigation-link">HOME</a></li>
 
-    <footer>
-        <a href="mailto: rwijesinghe@swin.edu.au">Questions? Feedback? Click to send email.</a>
+            <li class="nav-list-item"><a href="topic.html" class="header-navigation-link">WHAT IS JAVASCRIPT?</a></li>
+
+            <li class="nav-list-item"><a href="quiz.html" class="header-navigation-link">TEST YOUR KNOWLEDGE</a></li>
+
+            <li class="nav-list-item"><a href="enhancements.html" class="header-navigation-link">ENHANCEMENTS</a></li>
+        </ul>
+        </nav>
+    </header>
+
+    <!-- PAGE CONTENT -->
+    
+
+    <!-- FOOTER -->
+    <footer id="website-footer">
+        Questions? Feedback? Contact us!
+        <div class="email-individual">
+            <a class="send-email" href="mailto:rwijesinghe@swin.edu.au">
+                <img class="individual-portrait" src="../images/Ravinda-Wijesinghe.png" alt="tutor portrait">
+            </a>
+            <span class="tooltiptext">Email Ravinda!</span>
+        </div>
+
+        <div class="email-individual">
+            <a class="send-email" href="mailto:104142281@student.swin.edu.au">
+                <img class="individual-portrait" src="../images/portrait.webp" alt="lucy portrait">
+            </a>
+            <span class="tooltiptext">Email Lucy!</span>
+        </div>
+
+        <div class="email-individual">
+            <a class="send-email" href="mailto:104810423@student.swin.edu.au">
+                <img class="individual-portrait" src="../images/portrait.webp" alt="Eloise portrait">
+            </a>
+            <span class="tooltiptext">Email Eloise!</span>
+        </div>
+
+        <div class="email-individual">
+            <a class="send-email" href="104934718@student.swin.edu.au">
+                <img class="individual-portrait" src="../images/portrait.webp" alt="Oshadi portrait">
+            </a>
+            <span class="tooltiptext">Email Oshadi!</span>
+        </div>
     </footer>
+</body>
+
+
+
 </html>
