--- a/assign1/index.html
+++ b/assign1/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="enhancements page for COS10032 assignment 1 on topic Javascript">
-    <meta name="keywords" content="javascript, enhancements">
+    <meta name="description" content="index page for COS10032 assignment 1 on topic Javascript">
+    <meta name="keywords" content="javascript, homepage, about, educational">
     <meta name="author" content="Eloise Ridder-Strickland, Oshadi Dewmini Pattiarachchi, Lucy Yu">
     <link rel="stylesheet" href="../css/style.css">
     <title>Introduction to Javascript</title>
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+    <!-- HEADER -->
     <header id="website-header">
         <div id="header-left">
             <a href="index.html"><img id="header-js-icon" src="../images/header-icon.png" alt="javascript icon"></a>
@@ -24,26 +24,30 @@
         </div>
 
         <nav id="header-right">
+            <ul class="nav-list">
+            <li class="nav-list-item"><a href="index.html" class="header-navigation-link">HOME</a></li>
 
-            <a href="index.html" class="header-navigation-link">HOME</a>
+            <li class="nav-list-item"><a href="topic.html" class="header-navigation-link">WHAT IS JAVASCRIPT?</a></li>
 
-            <a href="topic.html" class="header-navigation-link">WHAT IS JAVASCRIPT?</a>
+            <li class="nav-list-item"><a href="quiz.html" class="header-navigation-link">TEST YOUR KNOWLEDGE</a></li>
 
-            <a href="quiz.html" class="header-navigation-link">TEST YOUR KNOWLEDGE</a>
-
-            <a href="enhancements.html" class="header-navigation-link">ENHANCEMENTS</a>
-
+            <li class="nav-list-item"><a href="enhancements.html" class="header-navigation-link">ENHANCEMENTS</a></li>
+        </ul>
         </nav>
     </header>
 
+    <!-- PAGE CONTENT -->
     <article>
         <h2 class="page-title">About this website</h2>
-        <p>Welcome to our website. Here, we will introduce you to the wonderful world of <strong>Javascript</strong>. If you would like
-            to know more, please feel free to explore, browse and don't forget to take the quiz!</p>
+        <p>Welcome to our website. Here, we will introduce you to the wonderful world of <strong>Javascript</strong>. </p>
+        <p> This is by no means a definitive resource but rather a high level summary about this powerful tool used in over
+        <em>1.52 billion websites</em> today. If
+        you would like to know more, please feel free to explore, browse and don't forget to take the quiz!</p>
 
         <a id="get-started" href="topic.html">GET STARTED!</a>
     </article>
 
+    <!-- FOOTER -->
     <footer id="website-footer">
         Questions? Feedback? Contact us!
         <div class="email-individual">
