--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -114,11 +114,11 @@
         <figure id="fig2">
             <img id="fig2-image" src="../images/JS-CSS-HTML.png" alt="3 layer standard web technologies" usemap="#weblevels">
             <figcaption>Figure 2 - standard web technologies.</figcaption>
-            <map name="weblevels">
+            <!--<map name="weblevels">
                 <area shape="poly" coords="61,122,59,315,767,401,1475,312,1471,127,768,50" href="topic2.html">
                 <area shape="poly" coords="60,372,57,561,766,647,1474,559,1471,373,1227,347,766,404,309,347" href="topic3.html">
                 <area shape="poly" coords="57,620,61,804,764,895,1470,808,1473,619,1225,593,764,653,302,593" href="topic4.html">
-            </map>
+            </map>-->
         </figure>
 
         <p>JavaScript, often referred to as JS for short is a <em>scripting or programming language used primarily in
